# mcco-projects

./: .gitignore  README.md
project1/: Bib2Html.cabal  Makefile  Mcco.Bib2Html.cabal  README.txt  run-all.sh  todo  uuagc_options
project1/doc/: Doc.latex
project1/examples/: all_types_fields_example.bib  aterm_simple.txt  med1.bib  med2.bib  monash.edu.au.bibtex  simple.bib
project1/examples/aterm-bibtex/: mcco-example_simplified.aterm
project1/examples/aterm-html/: simple1.at
project1/examples/bibtex/: all_types_fields_example.bib  all_types_fields_example.latex  compl1-bad.bib  mcco-example.bibtex  mcco-example_simplified.bibtex  monash.edu.au.bibtex
project1/src/: Bib2Html.hs  BibHtml.hs  Bibtex.ag  Bibtex.hs  FieldTransformer.ag  HtmlTree.hs  Lexer.hs  ParseBib.hs  Parser.hs  PpHtml.hs
project1/src/BibHtml/: BibtexSpec.hs  Converter.hs  DbTransformer.hs  FieldTransformer.ag
project1/src/Bibtex/: Basic.hs  Dependency.hs  Gen.ag  Gen.hs
project1/src/Html/: PrettyPrinter.hs  Tree.hs
project1/src/Lexer/: Internal.hs
project1/src/bib2html/: BibHtml.hs
project1/src/lib/: Bibtex.hs  Lexer.hs  Options.hs  Parser.hs
project1/src/lib/BibHtml/: BibtexSpec.hs  Converter.hs  DbTransformer.hs  Spec.ag  Spec.hs  Validator.ag
project1/src/lib/BibHtml/Spec/: Internal.ag  Spec.ag
project1/src/lib/Bibtex/: Internal.hs  Utility.hs
project1/src/lib/Html/: PrettyPrinter.hs  Tree.hs
project1/src/lib/Lexer/: Internal.hs
project1/src/parse-bib/: ParseBib.hs
project1/src/pp-html/: PpHtml.hs
project1/testsuite/: FieldTransformerTest.hs  LexerQuick.hs  LexerTest.hs  ParserQuick.hs  ParserTest.hs  SpecTest.hs  TreeTest.hs  Utility.hs
project1/testsuite/Lexer/: LexerHUnit.hs  Test.hs
project1/testsuite/Parser/: ParserHUnit.hs  ParserQuick.hs
project2/: Makefile  README.txt  TODO  render.sh  t-diagrams.cabal  uuagc_options
project2/doc/: Doc.tex
project2/examples/: Description.txt  b-compile-comp.tdiag  b-compile-intp.tdiag  b-compile-prog.tdiag  b-compiler.tdiag  b-interpreter.tdiag  b-platform.tdiag  basic.tdiag  basic2.tdiag  compile-exec.tdiag  nested-compile-left.ill.tdiag  nested-compile-left.tdiag  nested-compile-right.tdiag  nested-exec-left.tdiag  nested-exec-right.tdiag  var-decl.ill.tdiag  var-undefined.tdiag  vars-nested-compile-right.tdiag  vars-nested-exec-right.tdiag  vars2-nested-compile-right.tdiag  vars3-nested-compile-right.tdiag
project2/src/: Diag2Picture.hs  TDiag2Picture.hs  TcTDiag.hs  Type.hs  TypeChecker.ag
project2/src/CCO/: Diag.hs
project2/src/CCO/Diag/: AG.hs  Base.hs  Lexer.hs  Parser.hs
project2/src/CCO/Diag/AG/: Base.ag
project2/src/CCO/Picture/: AG.hs
project2/src/Diag2Picture/: AG.ag  Expand.ag  Inline.ag  Render.ag
project2/src/Type/: AG.ag  Error.hs  Internal.hs
project2/src/Type/Error/: EScope.hs  EType.hs  Internal.hs
project2/tdiagrams-0.0.4/src/CCO/Diag/: AG.hs
project2/testsuite/: TypeCheckTest.hs  Utility.hs
