name:                Bib2Html
version:             0.1.0.0
synopsis:            The solution for the Bib2Html mini-project of the Compiler Construction course (2013).
license:             GPL-3
license-file:        LICENSE
author:              Philipp Hausmann, Marco Vassena
maintainer:          <philipp.hausmann@314.ch>, <m.vassena@students.uu.nl>
category:            Text
build-type:          Custom
cabal-version:       >=1.8

executable parse-bib
  main-is:           ParseBib.hs
  other-modules:     Bibtex, Bibtex.Gen, Lexer, Parser, Lexer.Internal, FieldTransformer
  hs-source-dirs:    src
  build-depends:     base >=4.5.0, cco ==0.0.4, containers >=0.4, case-insensitive ==1.0.*

executable bib2html
  main-is:           BibHtml.hs
  hs-source-dirs:    src
  build-depends:     base >=4.5.0, cco ==0.0.4, containers >=0.4
  other-modules:     Bibtex, Bibtex.Gen, FieldTransformer

executable pp-html
  main-is:           PpHtml.hs
  hs-source-dirs:    src
  build-depends:     base >=4.5.0, cco ==0.0.4

test-suite lexer
  type:              exitcode-stdio-1.0
  main-is:           LexerTest.hs
  hs-source-dirs:    testsuite, src
  build-depends:     base >=4.5.0, HUnit ==1.2.*, cco ==0.0.4, QuickCheck >=2.6, containers >=0.4, case-insensitive ==1.0.*
  other-modules:     Bibtex, Bibtex.Gen, FieldTransformer
-- there seems to be some bug when using the uuagc precompiler with cabal
-- this is an ugly work around...
-- TODO open bug
  ghc-options:       -idist/build/

test-suite parser
  type:              exitcode-stdio-1.0
  main-is:           ParserTest.hs
  hs-source-dirs:    testsuite, src
  build-depends:     base >=4.5.0, HUnit ==1.2.*, cco ==0.0.4, QuickCheck >=2.6, containers >=0.4, case-insensitive ==1.0.*
  other-modules:     Bibtex, Bibtex.Gen, FieldTransformer
-- there seems to be some bug when using the uuagc precompiler with cabal
-- this is an ugly work around...
-- TODO open bug
  ghc-options:       -idist/build/

test-suite tree
  type:              exitcode-stdio-1.0
  main-is:           TreeTest.hs
  hs-source-dirs:    testsuite, src
  build-depends:     base >=4.5.0, HUnit ==1.2.*,cco ==0.0.4, QuickCheck >=2.6, containers >=0.4, case-insensitive ==1.0.*
  other-modules:     Bibtex, Bibtex.Gen, FieldTransformer
-- there seems to be some bug when using the uuagc precompiler with cabal
-- this is an ugly work around...
-- TODO open bug
  ghc-options:       -idist/build/
