name:                t-diagrams
version:             0.1.0.0
synopsis:            A DSL for T-Diagrams
description:         The second project for the Compiler Construction course (2013) at Uthrecht University.
license:             GPL-3
license-file:        LICENSE
author:              Marco Vassena, Philipp Hausmann
maintainer:          <m.vassena@students.uu.nl>, <philipp.hausmann@314.ch>
category:            Language
build-type:          Simple
cabal-version:       >=1.8

extra-source-files:    Makefile, src/CCO/Diag/AG.ag,
                       src/CCO/Diag/AG/Base.ag, src/CCO/Picture/AG.ag,
                       src/CCO/Picture/AG/Base.ag, 
                       src/CCO/Picture/AG/Printing.ag, src/Type/AG.ag

executable tc-tdiag
  main-is:          TcTDiag.hs
  build-depends:    base ==4.6.*, cco >= 0.0.4
  other-modules:    Type, Type.AG, Type.Internal, CCO.Diag
  hs-source-dirs:   src

executable parse-tdiag
  main-is:             ParseTDiag.hs
  build-depends:       base, cco >= 0.0.4
  other-modules:       CCO.Diag, CCO.Diag.AG, CCO.Diag.Base, CCO.Diag.Lexer,
                       CCO.Diag.Parser
  hs-source-dirs:      src

executable pp-picture
  main-is:             PpPicture.hs
  build-depends:       base, cco >= 0.0.4
  other-modules:       CCO.Picture, CCO.Picture.AG
  hs-source-dirs:      src

test-suite type-check
  type:               exitcode-stdio-1.0
  main-is:            TypeCheckTest.hs
  build-depends:      base, QuickCheck ==2.6.*, cco >= 0.0.4
  other-modules:      Utility, CCO.Diag, Type.AG, Type.Internal
  hs-source-dirs:     testsuite, src
