name:                t-diagrams
version:             0.1.0.0
synopsis:            A DSL for T-Diagrams
description:         The second project for the Compiler Construction course (2013) at Uthrecht University.
license:             GPL-3
license-file:        LICENSE
author:              Marco Vassena, Philipp Hausmann
maintainer:          <m.vassena@students.uu.nl>, <philipp.hausmann@314.ch>
category:            Language
build-type:          Custom
cabal-version:       >=1.8

-- cabal/uuagc workaround --
--
-- using cabal 1.14, the preprocessed uuagc file is put into the ./dist/build/ directory when
-- building test cases instead of the proper ./dist/build/MY_TEST_CASE/...
-- This leads to build errors because ghc then cannot find the file. To work around this
-- bug, the -idist option is passed.
-- This bug is not triggered with cabal 1.16.0.2, but for the time being we also want to
-- be able to compile with cabal 1.14.


extra-source-files:    Makefile, src/CCO/Diag/AG.ag,
                       src/CCO/Diag/AG/Base.ag, src/CCO/Picture/AG.ag,
                       src/CCO/Picture/AG/Base.ag, 
                       src/CCO/Picture/AG/Printing.ag, src/Type/AG.ag,
                       src/Diag2Picture/Expand.ag, src/Diag2Picture/Render.ag

executable parse-tdiag
  main-is:             ParseTDiag.hs
  build-depends:       base, cco >= 0.0.4
  other-modules:       CCO.Diag, CCO.Diag.AG, CCO.Diag.Base, CCO.Diag.Lexer,
                       CCO.Diag.Parser
  hs-source-dirs:      src

executable tc-tdiag
  main-is:          TcTDiag.hs
  build-depends:    base >=4.5, cco >= 0.0.4
  other-modules:    Type, Type.AG, Type.Internal, CCO.Diag, CCO.Diag.AG
  hs-source-dirs:   src

executable tdiag2picture
  main-is:          TDiag2Picture.hs
  build-depends:    base >=4.5, cco >= 0.0.4
  other-modules:    CCO.Diag, CCO.Picture, CCO.Picture.AG, Diag2Picture.Expand, Diag2Picture.Render, CCO.Diag.AG
  hs-source-dirs:   src


executable pp-picture
  main-is:             PpPicture.hs
  build-depends:       base, cco >= 0.0.4
  other-modules:       CCO.Picture, CCO.Picture.AG
  hs-source-dirs:      src

test-suite type-check
  type:               exitcode-stdio-1.0
  main-is:            TypeCheckTest.hs
  build-depends:      base, QuickCheck ==2.6.*, cco >= 0.0.4
  other-modules:      Utility, CCO.Diag, CCO.Diag.AG, Type.AG, Type.Internal
  hs-source-dirs:     testsuite, src
  ghc-options:        -idist/build
